--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -187,18 +187,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>var3</td>\n",
-       "      <td>M1A G2A</td>\n",
+       "      <th>3</th>\n",
+       "      <td>var4</td>\n",
+       "      <td>M1A G2C</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>var2</td>\n",
-       "      <td>M1A</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -208,18 +201,25 @@
        "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>var3</td>\n",
-       "      <td>M1A G2A</td>\n",
+       "      <th>3</th>\n",
+       "      <td>var4</td>\n",
+       "      <td>M1A G2C</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>var5</td>\n",
-       "      <td>G2A</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>var4</td>\n",
+       "      <td>M1A G2C</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>var7</td>\n",
+       "      <td>M1L</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -229,11 +229,11 @@
        "      <td>0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>var7</td>\n",
-       "      <td>M1L</td>\n",
+       "      <th>5</th>\n",
+       "      <td>var6</td>\n",
+       "      <td>M1A</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -241,13 +241,13 @@
       ],
       "text/plain": [
        "  barcode aa_substitutions  concentration  prob_escape\n",
-       "2    var3          M1A G2A            0.5          0.3\n",
-       "1    var2              M1A            0.5          0.2\n",
        "3    var4          M1A G2C            0.5          0.4\n",
-       "2    var3          M1A G2A            0.5          0.3\n",
-       "4    var5              G2A            1.0          0.5\n",
+       "3    var4          M1A G2C            0.5          0.4\n",
+       "3    var4          M1A G2C            0.5          0.4\n",
+       "3    var4          M1A G2C            0.5          0.4\n",
+       "6    var7              M1L            1.0          0.3\n",
        "5    var6              M1A            1.0          0.6\n",
-       "6    var7              M1L            1.0          0.3"
+       "5    var6              M1A            1.0          0.6"
       ]
      },
      "execution_count": 3,
@@ -283,33 +283,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80ff148e-158d-4784-95e4-cb0fa85c42b4",
+   "id": "0adc44a4-87bc-4691-bb95-b42e7eb2ddb4",
    "metadata": {},
    "source": [
-    "This should throw a key error when the column specified for grouping doesn't exist:"
+    "Here, we do a quick test when `group_by_col` is set to null -- the whole dataset should be bootstrapped:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8f6ae54-6aca-491f-a60f-1e8c46cbcc25",
+   "id": "94470c33-491e-4f36-a1e0-6380a958633b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'this_is_not_a_column is not in supplied data frame.'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_46337/926955545.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mboot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_bootstrap_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup_by_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'this_is_not_a_column'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/polyclonal/polyclonal/bootstrap.py\u001b[0m in \u001b[0;36mcreate_bootstrap_sample\u001b[0;34m(df, group_by_col)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;31m# Check to make sure group_by_col exists -- raise an error otherwise.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mgroup_by_col\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{group_by_col} is not in supplied data frame.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mboot_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'this_is_not_a_column is not in supplied data frame.'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "boot.create_bootstrap_sample(train_df, group_by_col='this_is_not_a_column')"
+    "assert len(train_df) == len(boot.create_bootstrap_sample(train_df, group_by_col=None))"
    ]
   }
  ],
